Make this project swagger-like
